# AiBridge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README_aibridge.md  README_v1.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
agn/: __init__.py  client.py
agn/adapters/: additional_models.py  aggregation_platforms.py  agnes.py  anthropic.py  audio_adapters.py  azure.py  base.py  chinese.py  emerging_models.py  gemini.py  kling.py  more_models.py  openai.py  pika.py  runway.py  stability.py  volcengine_cv.py
agn/core/: __init__.py  errors.py
agn/models/: common.py  video.py
bindings/dotnet/: .gitignore  build.sh
bindings/dotnet/AIBridge/: AIBridge.csproj  AibridgeException.cs  Client.cs  Hello.cs  Models.cs  Native.cs
bindings/go/: aibridge.go  error.go  go.mod  model.go  stream.go
bindings/go/example/: hello.go
bindings/jvm/: .gitignore  build.gradle.kts  settings.gradle.kts
bindings/jvm/src/main/java/io/aibridge/: AibridgeException.java  AibridgeNative.java  ApiException.java  AuthenticationException.java  ChatChoice.java  ChatCompletion.java  ChatCompletionChunk.java  ChatCompletionDelta.java  ChatMessage.java  ChatRequest.java  ChatStream.java  ChatUsage.java  ChoiceMessage.java  Client.java  DeltaMessage.java  Hello.java  ModelNotFoundException.java  NetworkException.java  ProviderNotFoundException.java  RateLimitException.java  ServiceUnavailableException.java  SpeechRequest.java  SpeechResult.java  SpeechResultFull.java  TimeoutException.java  UnsupportedCapabilityException.java  ValidationException.java  VoiceNotAvailableException.java  VoiceSpec.java
crates/aibridge-core/: Cargo.toml
crates/aibridge-core/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  retry.rs  router.rs  util.rs
crates/aibridge-core/src/adapter/: base.rs  factory.rs  mod.rs
crates/aibridge-core/src/adapters/: additional_models.rs  aggregation_platforms.rs  agnes.rs  anthropic.rs  assemblyai.rs  azure.rs  cartesia.rs  chinese.rs  deepgram.rs  echo.rs  edge_tts.rs  elevenlabs.rs  emerging_models.rs  gemini.rs  kling.rs  mod.rs  more_models.rs  openai.rs  openai_compat.rs  pika.rs  runway.rs  stability.rs  volcengine_cv.rs
crates/aibridge-core/src/model/: audio.rs  chat.rs  common.rs  image.rs  mod.rs  options.rs  video.rs
crates/aibridge-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/aibridge-ffi/include/: aibridge.h
crates/aibridge-ffi/src/: error.rs  handle.rs  lib.rs  runtime.rs  stream.rs  string.rs
crates/aibridge-node/: Cargo.toml  build.rs  index.d.ts  index.js  lib.js  package-lock.json  package.json
crates/aibridge-node/src/: lib.rs
crates/aibridge-python/: Cargo.toml  pyproject.toml
crates/aibridge-python/src/: lib.rs
docs/: FEATURE-GAPS.md  PROGRESS.md  index.md  migration-guide.md  plan.md
docs/en/: PROGRESS.md  design.md  index.md  migration-guide.md  plan.md
docs/superpowers/plans/: 2026-07-07-aibridge-implementation-plan.md
docs/superpowers/specs/: 2026-07-07-aibridge-rust-rewrite-design.md
examples/: hello_node.js  hello_python.py  hello_python_full.py  test_agnes.py  test_real_providers.py  test_volcengine.py
scripts/: build-dotnet.sh  build-ffi.sh  build-go.sh  build-jvm.sh  build-node.sh  build-python.sh  release.sh
tests/: test_client.py  test_router.py  test_unified_interface.py
tests/consistency/: ErrorProbe.java  cross_language_consistency.md  error_probe_go.go  error_probe_node.js  error_probe_python.py
tests/test_adapters/: test_additional_models.py  test_aggregation_platforms.py  test_agnes.py  test_anthropic.py  test_audio.py  test_azure.py  test_chinese.py  test_emerging_models.py  test_gemini.py  test_kling.py  test_more_chinese.py  test_more_models.py  test_new_adapters.py  test_openai.py  test_pika.py  test_runway.py  test_stability.py  test_volcengine_cv.py
tests/test_core/: test_errors.py
