[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agn-sdk"
version = "1.3.0"
description = "多模型统一接口 SDK - 一套 API 调用所有 AI 模型"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WingkySky", email = "wingky@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["ai", "multimodal", "image-generation", "video-generation", "chat", "openai", "tts", "asr", "embedding", "edge-tts"]

# 核心依赖
dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "anyio>=4.0.0",
]

# 可选依赖
[project.optional-dependencies]
edge-tts = [
    "edge-tts>=6.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flit>=3.0.0",
    "edge-tts>=6.1.0",
]

# 项目 URL
[project.urls]
Homepage = "https://github.com/WingkySky/AGN-SDK"
Repository = "https://github.com/WingkySky/AGN-SDK"
Documentation = "https://github.com/WingkySky/AGN-SDK#readme"
Issues = "https://github.com/WingkySky/AGN-SDK/issues"

# flit 配置
[tool.flit.module]
name = "agn"

[tool.flit.sdist]
include = ["agn/", "tests/", "examples/", "docs/", "README.md", "CHANGELOG.md"]
exclude = ["*.pyc", "__pycache__", ".git", ".github", "*.egg-info"]

# ruff 配置
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by black)
    "ASYNC240",  # pathlib in async functions (acceptable for quick file reads)
]

# black 配置
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# mypy 配置
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

# pytest 配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=agn --cov-report=term-missing"
