[package]
name = "aibridge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AIBridge 核心 - 多模态 AI 统一接口（Rust 核心，纯逻辑无 FFI）"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
bytes.workspace = true
