[package]
name = "aibridge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AIBridge 核心 - 多模态 AI 统一接口（Rust 核心，纯逻辑无 FFI）"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
bytes.workspace = true
# base64 编解码（util.rs 用，处理 data URI / 音频 base64）
base64 = "0.22"
# 随机数（router.rs 的 round_robin/random/weighted 策略用）
rand = "0.8"

[dev-dependencies]
# HTTP mock，用于适配器单测（openai_compat 等）
mockito = "1"
tokio = { workspace = true, features = ["full", "test-util"] }
